// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCollapsibleNavGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiCollapsibleNavGroup testClass1 testClass2"
  data-test-subj="test subject string"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup props background dark is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--dark"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup props background light is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--light"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup props background none is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup props iconSize is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--withTitle"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__title euiCollapsibleNavGroup__title--small"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          aria-hidden="true"
          data-euiicon-type="bolt"
        />
      </div>
      <div
        class="euiFlexItem"
      >
        <h3>
          Title
        </h3>
      </div>
    </div>
  </div>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup props iconType is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--withTitle"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__title euiCollapsibleNavGroup__title--small"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          aria-hidden="true"
          data-euiicon-type="bolt"
        />
      </div>
      <div
        class="euiFlexItem"
      >
        <h3>
          Title
        </h3>
      </div>
    </div>
  </div>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup props title is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--withTitle"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__title euiCollapsibleNavGroup__title--small"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
    >
      <div
        class="euiFlexItem"
      >
        <h3>
          Title
        </h3>
      </div>
    </div>
  </div>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup props titleElement can change the rendere element to h2 1`] = `
<div
  class="euiCollapsibleNavGroup euiCollapsibleNavGroup--withTitle"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__title euiCollapsibleNavGroup__title--small"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
    >
      <div
        class="euiFlexItem"
      >
        <h2>
          Title
        </h2>
      </div>
    </div>
  </div>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup props titleSize inherit is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup props titleSize large is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup props titleSize medium is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup props titleSize small is rendered 1`] = `
<div
  class="euiCollapsibleNavGroup"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup throws a warning if iconType is passed without a title 1`] = `
<div
  class="euiCollapsibleNavGroup"
  id="id"
>
  <div
    class="euiCollapsibleNavGroup__children"
  />
</div>
`;

exports[`EuiCollapsibleNavGroup when collapsible is true will render an accordion 1`] = `
<div
  class="euiAccordion euiCollapsibleNavGroup euiCollapsibleNavGroup--withTitle"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="id"
      aria-expanded="false"
      class="euiAccordion__button euiAccordion__buttonReverse euiCollapsibleNavGroup__title euiCollapsibleNavGroup__title--small"
      type="button"
    >
      <span
        class="euiAccordion__iconWrapper"
      >
        <div
          class="euiAccordion__icon"
          data-euiicon-type="arrowRight"
        />
      </span>
      <span>
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem"
          >
            <h3>
              Title
            </h3>
          </div>
        </div>
      </span>
    </button>
  </div>
  <div
    class="euiAccordion__childWrapper"
    id="id"
  >
    <div>
      <div
        class=""
      >
        <div
          class="euiCollapsibleNavGroup__children"
        />
      </div>
    </div>
  </div>
</div>
`;
